cleanup: remove unnecessary module type

--- a/example.html
+++ b/example.html
@@ -25,7 +25,7 @@
     <h1>INSTAR WebSocket Player (fMP4 via MSE)</h1>
     <video class="instar-ws" host="192.168.0.7:80" user="viewer" pass="viewer" venc="h264" substream="12" insecure
         controls autoplay muted></video>
-    <script type="module" src="./ws-player.js"></script>
+    <script src="./ws-player.js"></script>
 </body>
 
 </html>
