doc: correct video codecs in docs and example

--- a/example.html
+++ b/example.html
@@ -23,9 +23,8 @@
 
 <body>
     <h1>INSTAR WebSocket Player (fMP4 via MSE)</h1>
-    <video class="instar-ws" host="192.168.0.7:80" user="viewer" pass="viewer" venc="h264" substream="12" insecure
+    <video class="instar-ws" host="192.168.0.7:80" user="viewer" pass="viewer" venc="h264bp" substream="12" insecure
         controls autoplay muted></video>
     <script src="./ws-player.js"></script>
 </body>
-
 </html>
